<resources>
    <string name="app_name">玩Android</string>
    <string name="title_home">首页</string>
    <string name="title_knowledgesystem">知识体系</string>
    <string name="title_project">项目</string>
    <string name="title_my">我的</string>
    <string name="hot_title">Hot</string>
    <string name="search_title">Search</string>
    <string name="empty_network_error">Network error, Click Retry</string>
    <string name="empty_no_data">There is no data, Click Retry</string>
    <string name="setting_auto_update">开启后WIFI自动下载更新应用</string>
    <string name="auto_update">自动更新</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="test_page">测试页面</string>
    <string name="system_settings">系统设置</string>
    <!-- article -->
    <string name="browser_title">用系统浏览器打开</string>
    <string name="hot_key">大家都在搜</string>
    <string name="common_use">常用网站</string>

    <!-- navigation -->
    <string name="my_bookmark">我的书签</string>
    <string name="my_like">我喜欢的</string>
    <string name="my_about">关于我</string>
    <string name="title_login">登陆</string>
    <string name="title_register">注册</string>


    <string name="like_title">收藏</string>
    <string name="collection_time">收藏时间：%1$s</string>
    <string name="collection_success">收藏成功</string>
    <string name="collection_failed">收藏失败：%1$s</string>
    <string name="collection_cancel_success">取消收藏成功</string>
    <string name="collection_cancel_failed">取消收藏失败：%1$s</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="re_password">再次输入密码</string>
    <string name="the_username_or_password_can_not_be_empty">用户名或密码不能为空</string>
    <string name="no_network_connection">无网络连接</string>
    <string name="login_success">登陆成功</string>
    <string name="auto_login_success">自动登陆成功</string>
    <string name="click_avatar_login">点击登陆</string>
    <string name="logout">退出登陆</string>
    <string name="my_collection">我的收藏</string>
    <string name="bookmark">书签</string>
    <string name="setting">设置</string>
    <string name="not_login">没有登陆</string>
    <string name="share_title">分享</string>
    <string name="share_type_title">分享专题</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="share_type_url">%1$s分享【%2$s】专题：http://www.wanandroid.com/article/list/0?cid=%3$d</string>
    <string name="exit_system">再按一次退出程序</string>
    <string name="hit_des">描述</string>
    <string name="hit_title">标题</string>
    <!--about-->
    <string name="version">版本号</string>
    <string name="author">作者</string>
    <string name="about_des">描述</string>
    <string name="about_project">项目地址</string>
    <string name="about_project_url">https://github.com/caiyonglong/WanAndroid</string>
    <string name="about_detail">基于 "玩Android" 网站开放的api接口，获取数据并实现各个功能。\n
        本项目采用 MVP + RxJava2 + Retrofit2 + Dagger2 架构</string>
    <string name="my_about_more">https://github.com/caiyonglong</string>
</resources>
