<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="历史搜索" />
    </LinearLayout>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tflHistorys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        zhy:max_select="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/hot_key" />

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tflHotKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        zhy:max_select="0" />


    <TextView
        android:id="@+id/bookmarkTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/my_bookmark"
        android:visibility="gone" />

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tflBookMarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        zhy:max_select="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/common_use" />

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tflHotFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        zhy:max_select="0" />

</LinearLayout>